CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(CMAKE_BUILD_TYPE Debug CACHE STRING "Default Build Type")

PROJECT (php-trace)

FIND_PROGRAM(PHP_CONFIG "php-config" DOC "php-config as shipped with php")

EXECUTE_PROCESS(COMMAND ${PHP_CONFIG} --prefix             OUTPUT_VARIABLE PHP_PREFIX     OUTPUT_STRIP_TRAILING_WHITESPACE)
EXECUTE_PROCESS(COMMAND ${PHP_CONFIG} --includes           OUTPUT_VARIABLE PHP_INCLUDES   OUTPUT_STRIP_TRAILING_WHITESPACE)
EXECUTE_PROCESS(COMMAND ${PHP_CONFIG} --libs               OUTPUT_VARIABLE PHP_LIBS       OUTPUT_STRIP_TRAILING_WHITESPACE)
EXECUTE_PROCESS(COMMAND ${PHP_CONFIG} --configure-options  OUTPUT_VARIABLE PHP_CONFIGURE  OUTPUT_STRIP_TRAILING_WHITESPACE)

FIND_LIBRARY(PHP_TRACE_LIBPHP "php7" PATHS ${PHP_PREFIX} PATH_SUFFIXES lib lib64   DOC "path to libphp7")
FIND_LIBRARY(PHP_TRACE_LIBELF "elf"                                                DOC "path to libelf")
FIND_LIBRARY(PHP_TRACE_LIBDW  "dw"                                                 DOC "path to libdw")

if(${PHP_TRACE_LIBPHP} MATCHES PHP_TRACE_LIBPHP_NOTFOUND OR NOT EXISTS ${PHP_TRACE_LIBPHP}) 
    MESSAGE(FATAL_ERROR "libphp7 not found")
else()
    MESSAGE(STATUS "Found libphp7: ${PHP_TRACE_LIBPHP}")
endif()

if(${PHP_TRACE_LIBELF} MATCHES PHP_TRACE_LIBELF_NOTFOUND OR NOT EXISTS ${PHP_TRACE_LIBELF})
    MESSAGE(FATAL_ERROR "libelf not found")
else()
    MESSAGE(STATUS "Found libelf: ${PHP_TRACE_LIBELF}")
endif()

if(${PHP_TRACE_LIBDW} MATCHES PHP_TRACE_LIBDW_NOTFOUND OR NOT EXISTS ${PHP_TRACE_LIBDW})
    MESSAGE(FATAL_ERROR "libdw not found")
else()
    MESSAGE(STATUS "Found libdw: ${PHP_TRACE_LIBDW}")
endif()

if (${PHP_CONFIGURE} MATCHES "enable-debug")
    SET(CMAKE_BUILD_TYPE Debug CACHE STRING "PHP build type")
else()
    SET(CMAKE_BUILD_TYPE Release CACHE STRING "PHP build type")  
endif()

SET(CMAKE_INSTALL_PREFIX ${PHP_PREFIX} CACHE STRING "PHP install prefix" FORCE)

ADD_LIBRARY(phptrace STATIC php_trace_loop.c php_trace_api.c php_trace_zval.c php_trace_dwfl.c php_trace_print.c)
ADD_EXECUTABLE (php-trace php_trace_main.c)
ADD_DEPENDENCIES(php-trace phptrace)

INCLUDE_DIRECTORIES(.)

TARGET_LINK_LIBRARIES(phptrace ${PHP_TRACE_LIBPHP} ${PHP_TRACE_LIBELF} ${PHP_TRACE_LIBDW} -ldl ${PHP_LIBS})
TARGET_LINK_LIBRARIES(php-trace phptrace)

INSTALL (TARGETS php-trace
        RUNTIME DESTINATION bin)

INSTALL (FILES ${PROJECT_SOURCE_DIR}/php_trace.h
        DESTINATION include)
        
INSTALL (TARGETS phptrace
        DESTINATION lib)

SET_TARGET_PROPERTIES(php-trace PROPERTIES 
    COMPILE_FLAGS "-D_GNU_SOURCE -std=c99 -Wall -Werror ${PHP_INCLUDES}"
)

SET_TARGET_PROPERTIES(phptrace PROPERTIES 
    COMPILE_FLAGS "-D_GNU_SOURCE -std=c99 -Wall -Werror ${PHP_INCLUDES}"
)

